<resources>
    <string name="app_name">Support technique Starling Geneva</string>

    <string name="title_section_create_ticket">Créer des demandes</string>
    <string name="title_section_manage_ticket">Voir mes demandes</string>
    <string name="title_section_admin">Mes demandes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Déconnexion</string>

    <string name="action_settings">Settings</string>

    <string name="hello_create_tickets">Hello create tickets</string>

    <string name="hello_admin">Hello admin</string>
    <string name="title_activity_form_tickets">Création d\'une demande</string>

    <string name="hello_world">Hello world!</string>

    <string name="description">Description :</string>

    <string name="exemple_description">Exemple : il faut changer l\'objet</string>

    <string name="submit_create">Valider</string>

    <string name="lieu">Lieu</string>

    <string name="exemple_lieu">Exemple : chambre 412</string>

    <string name="my_tickets_title">Liste des demandes que vous avez effectué</string>

    <string name="displayOnlyCreated">N\'afficher que les demandes qui n\'ont pas encore été prises en charge</string>
</resources>
